--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,67 @@
-<p>footer works!</p>
+<footer>
+  <div class="container">
+    <div class="row my-5">
+      <div class="col-sm-12 col-md-6 col-lg-2 text-center my-3">
+        <a href="#"
+          ><img
+            src="../../assets/svg/001-facebook.svg"
+            alt="Facebook"
+            width="60px"
+            height="60px"
+        /></a>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-2 text-center my-3">
+        <a href="#"
+          ><img
+            src="../../assets/svg/008-youtube.svg"
+            alt="Youtube"
+            width="60px"
+            height="60px"
+        /></a>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-2 text-center my-3">
+        <a href="#"
+          ><img
+            src="../../assets/svg/003-whatsapp.svg"
+            alt="Whatsapp"
+            width="60px"
+            height="60px"
+        /></a>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-2 text-center my-3">
+        <a href="#"
+          ><img
+            src="../../assets/svg/006-skype.svg"
+            alt="Skype"
+            width="60px"
+            height="60px"
+        /></a>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-2 text-center my-3">
+        <a href="#"
+          ><img
+            src="../../assets/svg/011-instagram.svg"
+            alt="Instagram"
+            width="60px"
+            height="60px"
+        /></a>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-2 text-center my-3">
+        <a href="#"
+          ><img
+            src="../../assets/svg/010-linkedin.svg"
+            alt="LinkedIn"
+            width="60px"
+            height="60px"
+        /></a>
+      </div>
+    </div>
+    <div class="row my-5 text-dark">
+      <div class="col-12 text-center">
+        <h3>
+          Made With <span style="color: red;">&#x2764;</span>, Akshay Sethia
+        </h3>
+      </div>
+    </div>
+  </div>
+</footer>
