--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,49 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-light">
+  <a class="navbar-brand" href="#"><i>Hacker Poll</i></a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <img
+      src="../../assets/images/menu.png"
+      alt="Menu"
+      width="30px"
+      height="30px"
+    />
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item mx-3">
+        <a class="nav-link" routerLink="/home" routerLinkActive="activ">Home</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item mx-3" *ngIf="!username">
+        <a class="nav-link" routerLink="/login" rouerLinkActive="activ"
+          >Login</a
+        >
+      </li>
+      <li class="nav-item mx-3" *ngIf="!username">
+        <a class="nav-link" routerLink="/adminAdd" rouerLinkActive="activ"
+          >Add Candidate</a
+        >
+      </li>
+      <li class="nav-item mx-3" *ngIf="username && id">
+        <a
+          class="nav-link"
+          [routerLink]="['/viewProfile', id]"
+          rouerLinkActive="activ"
+          >Profile</a
+        >
+      </li>
+      <li class="nav-item mx-3" *ngIf="username">
+        <a class="nav-link" (click)="logOut()">LogOut</a>
+      </li>
+    </ul>
+  </div>
+</nav>
