--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  background: url("./assets/images/blue-snow.png");
+  color: whitesmoke !important;
+}
+
+p {
+  font-size: 30px !important;
+}
